feat: add GET member capacity information to project
